<resources>
    <string name="app_name">Speed reading</string>
    <string name="Exit">Exit</string>
    <string name="Start_test">Начать тест</string>
    <string name="Stop_test">Остановить тест</string>
    <string name="Start_test_speed_reading">Тест на скорость чтения</string>
    <string name="title_activity_menu">Menu</string>
    <string name="Main_activity">Menu</string>


    <string name="DialogName">Имя пользователя </string>
    <string name="ButtonUserName">Изменить имя </string>
    <string name="DialogButtonOk">Ок </string>
    <string name="DialogButtonCancel">Отмена </string>
    <string name="UserTest">Тестируемый: </string>
    <string name="UserTestResultBefore">Для определения скорости чтения\n необходимо пройти тест </string>
    <string name="UserTestResult">Ваша скорость чтения: </string>
    <string name="UserTestResultEndText">знака в минуту. </string>
    <string name="UserTestResultFalse">Тест не пройден </string>
    <string name="TitleResult">Результат теста </string>
    <string name="username">Анонимный </string>
    <string name="signin">Войти </string>
    <string name="cancel">Отмена </string>


    <string name="TimerText">До конца теста осталось: </string>
    <string name="TimerTextTime">сек. </string>
    <string name="action_settings">Settings</string>

    <string name="settings_TextSize">Размер шрифта</string>
    <string name="settings_TextSize_Big">Укрупнённый размер шрифта</string>
    <string name="settings_TextSize_Normal">Средний размер шрифта</string>
    <string name="settings_TextSize_Small">Уменьшенный размер шрифта</string>
    <string name="Main_Button_Settings">Настройки</string>
    <string name="Settingslabel">Settings</string>

</resources>
